--- a/Kiba/View/Auth/KBAAuthController.xib
+++ b/Kiba/View/Auth/KBAAuthController.xib
@@ -17,35 +17,32 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="falsche Eingabe!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tbo-VE-TlS">
-                    <rect key="frame" x="621" y="458" width="187" height="30"/>
+                    <rect key="frame" x="629" y="430" width="187" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="187" id="pkb-4t-IHG"/>
-                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jetzt Authentifizieren!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3BJ-4b-CL8">
-                    <rect key="frame" x="407" y="105" width="198" height="26"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Jetzt Authentifizieren!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3BJ-4b-CL8">
+                    <rect key="frame" x="409" y="90" width="207" height="27"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Vorteil für Sie: verlieren Sie ihr Gerät, können Sie bequem die App deaktivieren lassen." lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="609" translatesAutoresizingMaskIntoConstraints="NO" id="s8D-Q2-STV">
-                    <rect key="frame" x="200" y="346" width="609" height="41"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Vorteil für Sie: verlieren Sie ihr Gerät, können Sie bequem die App deaktivieren lassen." lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="605" translatesAutoresizingMaskIntoConstraints="NO" id="s8D-Q2-STV">
+                    <rect key="frame" x="208" y="318" width="605" height="41"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="608" translatesAutoresizingMaskIntoConstraints="NO" id="QWH-fP-4rE">
-                    <rect key="frame" x="200" y="219" width="608" height="61"/>
+                    <rect key="frame" x="208" y="191" width="608" height="61"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <string key="text">Mithilfe der Authentifizierung können Sie alle Features der KiBa App nutzen. Sie können ihre App in jeder beliebigen KiBa-Filiale freischalten lassen. Dafür muss lediglich ein Sicherheitscode von einem Berater eingegeben werden. </string>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RTi-eO-wPU">
-                    <rect key="frame" x="200" y="501" width="93" height="38"/>
+                    <rect key="frame" x="208" y="473" width="93" height="38"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="21"/>
                     <state key="normal" title="validieren!">
@@ -56,7 +53,7 @@
                     </connections>
                 </button>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ggk-1H-ANl">
-                    <rect key="frame" x="200" y="458" width="413" height="30"/>
+                    <rect key="frame" x="208" y="430" width="413" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
@@ -64,24 +61,23 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="s8D-Q2-STV" firstAttribute="leading" secondItem="QWH-fP-4rE" secondAttribute="leading" id="7Lg-7i-D0z"/>
-                <constraint firstItem="tbo-VE-TlS" firstAttribute="bottom" secondItem="ggk-1H-ANl" secondAttribute="bottom" id="7Xi-2w-awd"/>
-                <constraint firstAttribute="centerX" secondItem="3BJ-4b-CL8" secondAttribute="centerX" constant="6" id="PNU-PY-kVb"/>
-                <constraint firstItem="QWH-fP-4rE" firstAttribute="top" secondItem="3BJ-4b-CL8" secondAttribute="bottom" constant="88" id="Pxj-ex-1wH"/>
-                <constraint firstItem="s8D-Q2-STV" firstAttribute="top" secondItem="QWH-fP-4rE" secondAttribute="bottom" constant="66" id="USb-z2-RId"/>
-                <constraint firstItem="s8D-Q2-STV" firstAttribute="leading" secondItem="ggk-1H-ANl" secondAttribute="leading" id="UwW-CB-Rpc"/>
-                <constraint firstItem="ggk-1H-ANl" firstAttribute="top" secondItem="s8D-Q2-STV" secondAttribute="bottom" constant="71" id="VEA-hJ-HJ3"/>
-                <constraint firstItem="RTi-eO-wPU" firstAttribute="top" secondItem="2" secondAttribute="top" constant="501" id="WVI-0u-GMP"/>
-                <constraint firstAttribute="centerX" secondItem="s8D-Q2-STV" secondAttribute="centerX" constant="7.5" id="Yk1-lO-1BV"/>
-                <constraint firstItem="tbo-VE-TlS" firstAttribute="top" secondItem="ggk-1H-ANl" secondAttribute="top" id="YxL-dm-fXZ"/>
-                <constraint firstItem="RTi-eO-wPU" firstAttribute="top" secondItem="ggk-1H-ANl" secondAttribute="bottom" constant="13" id="ahU-iA-SiE"/>
-                <constraint firstItem="tbo-VE-TlS" firstAttribute="leading" secondItem="ggk-1H-ANl" secondAttribute="trailing" constant="8" id="bsX-8o-GcK"/>
-                <constraint firstAttribute="centerX" secondItem="QWH-fP-4rE" secondAttribute="centerX" constant="8" id="foE-FT-yn7"/>
-                <constraint firstItem="ggk-1H-ANl" firstAttribute="top" secondItem="2" secondAttribute="top" constant="458" id="lwT-Mx-7c0"/>
-                <constraint firstItem="s8D-Q2-STV" firstAttribute="leading" secondItem="RTi-eO-wPU" secondAttribute="leading" id="pUl-et-EhY"/>
-                <constraint firstItem="tbo-VE-TlS" firstAttribute="trailing" secondItem="QWH-fP-4rE" secondAttribute="trailing" id="r14-6W-EPC"/>
-                <constraint firstItem="3BJ-4b-CL8" firstAttribute="top" secondItem="2" secondAttribute="top" constant="105" id="rGD-wO-Utv"/>
-                <constraint firstItem="s8D-Q2-STV" firstAttribute="top" secondItem="2" secondAttribute="top" constant="346" id="v9J-Hr-PWd"/>
+                <constraint firstItem="3BJ-4b-CL8" firstAttribute="top" secondItem="2" secondAttribute="top" constant="90" id="1Ki-6L-YbL"/>
+                <constraint firstItem="RTi-eO-wPU" firstAttribute="leading" secondItem="ggk-1H-ANl" secondAttribute="trailing" constant="-413" id="3gj-lw-7nl"/>
+                <constraint firstItem="tbo-VE-TlS" firstAttribute="leading" secondItem="ggk-1H-ANl" secondAttribute="trailing" constant="8" id="4pE-4r-YhM"/>
+                <constraint firstItem="QWH-fP-4rE" firstAttribute="top" secondItem="3BJ-4b-CL8" secondAttribute="bottom" constant="74" id="7GM-9f-QwW"/>
+                <constraint firstItem="RTi-eO-wPU" firstAttribute="top" secondItem="ggk-1H-ANl" secondAttribute="bottom" constant="13" id="7Wj-JQ-Hyl"/>
+                <constraint firstItem="RTi-eO-wPU" firstAttribute="leading" secondItem="ggk-1H-ANl" secondAttribute="leading" id="AiS-WZ-hmD"/>
+                <constraint firstItem="s8D-Q2-STV" firstAttribute="top" secondItem="QWH-fP-4rE" secondAttribute="bottom" constant="66" id="EB1-mO-CQl"/>
+                <constraint firstAttribute="centerX" secondItem="3BJ-4b-CL8" secondAttribute="centerX" constant="-0.5" id="JAM-dZ-W5z"/>
+                <constraint firstItem="tbo-VE-TlS" firstAttribute="trailing" secondItem="QWH-fP-4rE" secondAttribute="trailing" id="Lmw-DI-0li"/>
+                <constraint firstItem="s8D-Q2-STV" firstAttribute="leading" secondItem="QWH-fP-4rE" secondAttribute="trailing" constant="-608" id="R2Z-Pt-Nea"/>
+                <constraint firstItem="tbo-VE-TlS" firstAttribute="bottom" secondItem="ggk-1H-ANl" secondAttribute="bottom" id="ZyW-di-4ua"/>
+                <constraint firstItem="ggk-1H-ANl" firstAttribute="top" secondItem="s8D-Q2-STV" secondAttribute="bottom" constant="71" id="eMj-f5-riR"/>
+                <constraint firstItem="ggk-1H-ANl" firstAttribute="leading" secondItem="s8D-Q2-STV" secondAttribute="leading" id="gMm-hU-zAm"/>
+                <constraint firstAttribute="centerX" secondItem="QWH-fP-4rE" secondAttribute="centerX" id="ggN-a5-7CK"/>
+                <constraint firstItem="QWH-fP-4rE" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="2" secondAttribute="leading" constant="50" id="iB6-ng-esx"/>
+                <constraint firstItem="tbo-VE-TlS" firstAttribute="leading" secondItem="s8D-Q2-STV" secondAttribute="trailing" constant="-184" id="wbV-fs-EwM"/>
+                <constraint firstItem="tbo-VE-TlS" firstAttribute="top" secondItem="ggk-1H-ANl" secondAttribute="top" id="zMh-Tj-6sj"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
             <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
